Fixed mis-aligned label

--- a/web/frontend/styles/forms/standard.scss
+++ b/web/frontend/styles/forms/standard.scss
@@ -37,7 +37,6 @@ form.standard-form {
             flex: 1;
             padding: 0;
 
-
             .input-group {
                 flex: 1;
                 margin: 0;
@@ -49,7 +48,8 @@ form.standard-form {
                     margin-bottom: 0.2em;
                 }
 
-                input[type="number"], input[type="text"] {
+                input[type="number"],
+                input[type="text"] {
                     width: 100%;
                 }
             }
@@ -69,7 +69,7 @@ form.standard-form {
             }
         }
     }
-    
+
     ul.coords-wrapper {
         &:before {
             content: "Coords:";
@@ -86,6 +86,7 @@ form.standard-form {
 
     ul.altitude-wrapper {
         padding-top: 0;
+
         &:before {
             content: "Altitude:";
         }
@@ -103,6 +104,10 @@ form.standard-form {
         padding-top: 0.5em;
         padding-bottom: 0.5em;
 
+        label {
+            vertical-align: middle;
+        }
+
         &.input-group-invalid {
             input[type="text"] {
                 border-color: $red;
@@ -118,6 +123,7 @@ form.standard-form {
 
         &.file {
             min-height: 100px;
+
             .droparea {
                 display: flex;
                 flex-direction: column;
@@ -275,85 +281,88 @@ form.standard-form {
                 }
             }
         }
-    }
 
-    .map-input {
-        height: 400px;
-        width: 100%;
-        border-radius: 0.5em;
-    }
-
-    label.input-label {
-        color: $grey;
-        font-weight: 100;
-        padding-right: 0.5em;
-        display: inline-block;
-        min-width: 100px;
-    }
-
-    input[type="text"],
-    textarea,
-    input[type="number"] {
-        padding: 0.5em;
-        box-sizing: border-box;
-        max-width: 100%;
-        width: 400px;
-        transition: border-color 0.2s;
-        border: 1px solid #ccc;
-        border-radius: 0.5em;
-
-        &:focus {
-            outline: none;
-            border-color: $primary;
+        .map-input {
+            height: 400px;
+            width: 100%;
+            border-radius: 0.5em;
         }
-    }
 
-    textarea {
-        width: 100%;
-        min-width: 100%;
-        max-width: 100%;
-        font-family: inherit;
-        display: block;
-        min-height: 50px;
-        margin-top: 0.5em;
-    }
-
-    // We style inputs of type checkbox in such
-    // a way that they look like switches.
-    input[type="checkbox"] {
-        display: none;
-    }
-
-    label.checkbox {
-        display: inline-block;
-        width: 40px;
-        height: 20px;
-        background-color: #ccc;
-        border-radius: 10px;
-        position: relative;
-        cursor: pointer;
-        transition: background-color 0.3s;
-        
-        &::after {
-            content: '';
-            position: absolute;
-            top: 1px;
-            left: 1px;
-            width: 18px;
-            height: 18px;
-            background-color: #fff;
-            border-radius: 50%;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s;
+        label.input-label {
+            color: $grey;
+            font-weight: 100;
+            padding-right: 0.5em;
+            display: inline-block;
+            min-width: 100px;
         }
-    }
 
-    input[type="checkbox"]:checked + label.checkbox::after {
-        transform: translateX(100%);
-    }
+        input[type="text"],
+        textarea,
+        input[type="number"] {
+            padding: 0.5em;
+            box-sizing: border-box;
+            max-width: 100%;
+            width: 400px;
+            transition: border-color 0.2s;
+            border: 1px solid #ccc;
+            border-radius: 0.5em;
 
-    input[type="file"] {
-        display: none;
+            &:focus {
+                outline: none;
+                border-color: $primary;
+            }
+        }
+
+        textarea {
+            width: 100%;
+            min-width: 100%;
+            max-width: 100%;
+            font-family: inherit;
+            display: block;
+            min-height: 50px;
+            max-height: 200px;
+            margin-top: 0.5em;
+        }
+
+        // We style inputs of type checkbox in such
+        // a way that they look like switches.
+        input[type="checkbox"] {
+            display: none;
+        }
+
+        label.checkbox {
+            display: inline-block;
+            width: 30px;
+            height: 16px;
+            background-color: #ccc;
+            border-radius: 1em;
+            position: relative;
+            cursor: pointer;
+            transition: background-color 0.3s;
+
+            &::after {
+                content: '';
+                position: absolute;
+                width: 16px;
+                height: 16px;
+                top: 0;
+                left: 8px;
+                margin-left: -8px;
+                background-color: #fff;
+                border-radius: 100%;
+                border: 1px solid #ccc;
+                box-sizing: border-box;
+                transition: left 0.3s, border-color 0.3s;
+            }
+        }
+
+        input[type="checkbox"]:checked+label.checkbox::after {
+            left: 22px;
+        }
+
+        input[type="file"] {
+            display: none;
+        }
     }
 
     button[type="submit"] {
@@ -417,8 +426,12 @@ form.standard-form {
             color: $red;
         }
 
-        input[type="checkbox"]:checked + label.checkbox {
+        input[type="checkbox"]:checked+label.checkbox {
             background-color: $red;
+        }
+
+        input[type="checkbox"]:checked+label.checkbox::after {
+            border-color: $red;
         }
 
         button[type="submit"] {
@@ -440,8 +453,12 @@ form.standard-form {
     }
 
     &[method="PUT"] {
-        input[type="checkbox"]:checked + label.checkbox {
+        input[type="checkbox"]:checked+label.checkbox {
             background-color: $green;
+        }
+
+        input[type="checkbox"]:checked+label.checkbox::after {
+            border-color: $green;
         }
 
         button[type="submit"] {
@@ -463,8 +480,12 @@ form.standard-form {
     }
 
     &[method="POST"] {
-        input[type="checkbox"]:checked + label.checkbox {
+        input[type="checkbox"]:checked+label.checkbox {
             background-color: $blue;
+        }
+
+        input[type="checkbox"]:checked+label.checkbox::after {
+            border-color: $blue;
         }
 
         button[type="submit"] {
